# hftbacktest

./: Cargo.toml  gmo_trades.md
bot-forward-test/: Cargo.toml
bot-forward-test/src/: main.rs
collector/: collect.sh
collector/src/: main.rs
collector/src/bitbank/: http.rs  mod.rs
collector/src/bitflyer/: http.rs  mod.rs
collector/src/coinbase/: http.rs  mod.rs
collector/src/coincheck/: http.rs  mod.rs
collector/src/gmocoin/: mod.rs  ws.rs
collector/src/gmofx/: mod.rs  ws.rs
connector/: Cargo.toml
connector-gmocoin/: Cargo.toml
connector-gmocoin/src/: main.rs
connector/src/: main.rs
connector/src/bitbank/: market_data_stream.rs  mod.rs  ordermanager.rs  rest.rs  user_data_stream.rs
connector/src/bitbank/msg/: mod.rs  rest.rs  stream.rs
examples/: feature_monitor.py  forward_monitor.py  ml_pipeline.py  mm_spot_btc_0324.py
