[package]
name = "bot-forward-test"
version = "0.1.0"
edition = "2024"

[dependencies]
hftbacktest = { path = "../hftbacktest" }
tracing = "0.1.43"
thiserror = "2.0.17"
chrono = { version = "0.4.42" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
iceoryx2 = { version = "0.6.1", features = ["logger_tracing"] }
toml = "0.9.8"
tracing-subscriber = "0.3.22"
clap = { version = "4.5.53", features = ["derive"] }
